--- a/HealthSync/HealthSync/Views/DashboardPage.xaml
+++ b/HealthSync/HealthSync/Views/DashboardPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HealthSync.Views.DashboardPage"
-             Title="Dashboard Pagina">
+             Title="Dashboard">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
