--- a/HealthSync/HealthSync/Views/DashboardPage.xaml
+++ b/HealthSync/HealthSync/Views/DashboardPage.xaml
@@ -3,10 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HealthSync.Views.DashboardPage"
              Title="Dashboard">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <VerticalStackLayout Padding="20" Spacing="12">
+        <Label Text="{Binding IngelogdeUser.VolledigeNaam, StringFormat='Welkom {0}'}" FontSize="18" />
     </VerticalStackLayout>
 </ContentPage>
