--- a/HealthSync/HealthSync/Views/LifestylePage.xaml
+++ b/HealthSync/HealthSync/Views/LifestylePage.xaml
@@ -21,8 +21,7 @@
                     </Border.StrokeShape>
 
                     <HorizontalStackLayout VerticalOptions="Center" HorizontalOptions="Start">
-                        <Label Text="Steps" FontSize="16" VerticalOptions="Center" />
-                        <Label x:Name="LblSteps" Text="0" FontSize="22" FontAttributes="Bold" Margin="12,0,0,0" />
+                        <Label x:Name="StepsLabel" Text="Stappen: 0" FontSize="24" HorizontalOptions="Center" />
                     </HorizontalStackLayout>
                 </Border>
 
@@ -85,10 +84,11 @@
                 <!-- Hier komen later lifestyle logs / stats / knoppen -->
 
             </VerticalStackLayout>
+            
         </ScrollView>
 
         <!-- Vaste knop onderaan -->
-        <Button Grid.Row="1" x:Name="Testknop" Text="Testknop" />
+        <Button Grid.Row="1" x:Name="BtnCounterSettings" Text="Counter settings" Clicked="CounterSettings_Clicked" />
 
     </Grid>
 </ContentPage>
